// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`setStoneAsPassed.exhausted given: [case1] peer reviewer exhaustion writes to passage.jsonl when: [t0] first attempt consumes budget then: matches snapshot — step 1, the round that consumed budget: exhausted journey - [t0] first attempt, rejected 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.test
   ├─ passage = blocked
   ├─ reason = blockers found
   └─ guard
      ├─ artifacts
      │   └─ $route/1.test*.md
      ├─ reviews
      │   └─ r1: limited (l1, 1/2)
      │       ├─ rejected <elapsed>
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.test._.review.i001.<hash>.r001._.given.by_peer.limited.md
      │       └─ taken: .reviews/peer/1.test._.review.i001.<hash>.r001._.taken.by_self.limited.md
      └─ judges
          └─ j1: echo "passed: false\\nreason: blockers found"
              ├─ finished <elapsed> ✗
              └─ reason: blockers found"
`;

exports[`setStoneAsPassed.exhausted given: [case1] peer reviewer exhaustion writes to passage.jsonl when: [t1] second attempt depletes budget (but review still runs) then: matches snapshot — step 2, the round that depleted budget: exhausted journey - [t1] second attempt, rejected 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.test
   ├─ passage = blocked
   ├─ reason = blockers found
   └─ guard
      ├─ artifacts
      │   └─ $route/1.test*.md
      ├─ reviews
      │   └─ r1: limited (l1, 2/2)
      │       ├─ rejected <elapsed>
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.test._.review.i002.<hash>.r001._.given.by_peer.limited.md
      │       └─ taken: .reviews/peer/1.test._.review.i002.<hash>.r001._.taken.by_self.limited.md
      └─ judges
          └─ j1: echo "passed: false\\nreason: blockers found"
              ├─ finished <elapsed> ✗
              └─ reason: blockers found"
`;

exports[`setStoneAsPassed.exhausted given: [case1] peer reviewer exhaustion writes to passage.jsonl when: [t2] third attempt hits exhaustion (review is SKIPPED) then: matches snapshot — step 3, exhaustion and its options tree: exhausted journey - [t2] third attempt, exhausted 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.test
   ├─ passage = blocked
   ├─ reason = peer reviewer budget exhausted: limited
   ├─ options
   │  ├─ increase budget — yours to spend
   │  │  └─ rhx route.guard.budget --for review --add N --peer limited --stone 1.test
   │  └─ approve as-is — a human must grant
   │     └─ rhx route.stone.set --stone 1.test --as approved
   └─ guard
      ├─ artifacts
      │   └─ $route/1.test*.md
      └─ reviews
          └─ r1: limited (l1, 2/2)
              ├─ exhausted 🌙, cached
              ├─ terminal — does not block higher levels
              ├─ 1 blocker 🔴
              ├─ 0 nitpicks ✓
              ├─ given: .reviews/peer/1.test._.review.i002.<hash>.r001._.given.by_peer.limited.md
              └─ taken: .reviews/peer/1.test._.review.i002.<hash>.r001._.taken.by_self.limited.md"
`;

exports[`setStoneAsPassed.exhausted given: [case2] a FRESH blocker answered after the reviewer exhausted when: [t0] the only review runs and raises a blocker then: matches snapshot — the only round this budget allows 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.test
   ├─ passage = blocked
   ├─ reason = blockers found
   └─ guard
      ├─ artifacts
      │   └─ $route/1.test*.md
      ├─ reviews
      │   └─ r1: limited (l1, 1/1)
      │       ├─ rejected <elapsed>
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.test._.review.i001.<hash>.r001._.given.by_peer.limited.md
      │       └─ taken: .reviews/peer/1.test._.review.i001.<hash>.r001._.taken.by_self.limited.md
      └─ judges
          └─ j1: echo "passed: false\\nreason: blockers found"
              ├─ finished <elapsed> ✗
              └─ reason: blockers found"
`;

exports[`setStoneAsPassed.exhausted given: [case2] a FRESH blocker answered after the reviewer exhausted when: [t1] a second attempt is made with the artifact UNTOUCHED then: matches snapshot — the FRESH-debt halt, distinct from the carried one 1`] = `
"🦉 the reviewers await your reply

🌕 lets respond
   │
   ├─ review.peer 1/1
   │  ├─ slug = limited
   │  ├─ verdict = 1 blocker, 0 nitpicks
   │  ├─ contemplate from
   │  │  └─ .reviews/peer/1.test._.review.i001.<hash>.r001._.given.by_peer.limited.md
   │  └─ articulate into
   │     └─ .reviews/peer/1.test._.review.i001.<hash>.r001._.taken.by_self.limited.md
   │
   └─ when you've contemplated this reviewer, run
      └─ rhx route.stone.set --stone 1.test --as contemplated --that limited"
`;

exports[`setStoneAsPassed.exhausted given: [case2] a FRESH blocker answered after the reviewer exhausted when: [t2] the driver answers, still with NO artifact edit then: matches snapshot — an answered blocker beside an exhausted reviewer 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.test
   ├─ passage = blocked
   ├─ reason = peer reviewer budget exhausted: limited
   ├─ options
   │  ├─ increase budget — yours to spend
   │  │  └─ rhx route.guard.budget --for review --add N --peer limited --stone 1.test
   │  └─ approve as-is — a human must grant
   │     └─ rhx route.stone.set --stone 1.test --as approved
   └─ guard
      ├─ artifacts
      │   └─ $route/1.test*.md
      └─ reviews
          └─ r1: limited (l1, 1/1)
              ├─ exhausted 🌙, cached
              ├─ terminal — does not block higher levels
              ├─ 1 blocker 🔴
              ├─ 0 nitpicks ✓
              ├─ given: .reviews/peer/1.test._.review.i001.<hash>.r001._.given.by_peer.limited.md
              └─ taken: .reviews/peer/1.test._.review.i001.<hash>.r001._.taken.by_self.limited.md"
`;

exports[`setStoneAsPassed.exhausted given: [case3] a budget top-up does NOT discharge a debt — it only buys a confirmation round when: [t0] the one round the budget affords raises a blocker then: matches snapshot — step 1, the round that spent the budget 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.test
   ├─ passage = blocked
   ├─ reason = blockers found
   └─ guard
      ├─ artifacts
      │   └─ $route/1.test*.md
      ├─ reviews
      │   └─ r1: limited (l1, 1/1)
      │       ├─ rejected <elapsed>
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.test._.review.i001.<hash>.r001._.given.by_peer.limited.md
      │       └─ taken: .reviews/peer/1.test._.review.i001.<hash>.r001._.taken.by_self.limited.md
      └─ judges
          └─ j1: echo "passed: false\\nreason: blockers found"
              ├─ finished <elapsed> ✗
              └─ reason: blockers found"
`;

exports[`setStoneAsPassed.exhausted given: [case3] a budget top-up does NOT discharge a debt — it only buys a confirmation round when: [t1] the driver tops the budget up and re-enters, with NO answer written then: matches snapshot — a topped-up reviewer, still held by the debt 1`] = `
"🦉 the reviewers await your reply

🌕 lets respond
   │
   ├─ review.peer 1/1
   │  ├─ slug = limited
   │  ├─ verdict = 1 blocker, 0 nitpicks
   │  ├─ contemplate from
   │  │  └─ .reviews/peer/1.test._.review.i001.<hash>.r001._.given.by_peer.limited.md
   │  └─ articulate into
   │     └─ .reviews/peer/1.test._.review.i001.<hash>.r001._.taken.by_self.limited.md
   │
   └─ when you've contemplated this reviewer, run
      └─ rhx route.stone.set --stone 1.test --as contemplated --that limited"
`;

exports[`setStoneAsPassed.exhausted given: [case3] a budget top-up does NOT discharge a debt — it only buys a confirmation round when: [t2] the driver answers and repairs, then re-enters on the topped-up budget then: matches snapshot — the confirmation round the ordered levers bought 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.test
   ├─ passage = blocked
   ├─ reason = blockers found
   └─ guard
      ├─ artifacts
      │   └─ $route/1.test*.md
      ├─ reviews
      │   └─ r1: limited (l1, 2/3)
      │       ├─ approved <elapsed>
      │       ├─ 0 blockers ✓
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.test._.review.i002.<hash>.r001._.given.by_peer.limited.md
      │       └─ taken: .reviews/peer/1.test._.review.i002.<hash>.r001._.taken.by_self.limited.md
      └─ judges
          └─ j1: echo "passed: false\\nreason: blockers found"
              ├─ finished <elapsed> ✗
              └─ reason: blockers found"
`;

exports[`setStoneAsPassed.exhausted given: [case4] the artifact is EDITED while an exhausted reviewer holds an unanswered blocker when: [t0] the one round the budget affords raises a blocker then: matches snapshot — the round that raised the blocker: edit-escape journey - [t0] blocker raised 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.test
   ├─ passage = blocked
   ├─ reason = blockers found
   └─ guard
      ├─ artifacts
      │   └─ $route/1.test*.md
      ├─ reviews
      │   └─ r1: limited (l1, 1/1)
      │       ├─ rejected <elapsed>
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.test._.review.i001.<hash>.r001._.given.by_peer.limited.md
      │       └─ taken: .reviews/peer/1.test._.review.i001.<hash>.r001._.taken.by_self.limited.md
      └─ judges
          └─ j1: echo "passed: false\\nreason: blockers found"
              ├─ finished <elapsed> ✗
              └─ reason: blockers found"
`;

exports[`setStoneAsPassed.exhausted given: [case4] the artifact is EDITED while an exhausted reviewer holds an unanswered blocker when: [t1] the driver EDITS the artifact instead of an answer, and re-enters then: matches snapshot — the halt that survived the edit: edit-escape journey - [t1] debt survives one edit 1`] = `
"🦉 the reviewers await your reply

🌕 lets respond
   │
   ├─ review.peer 1/1
   │  ├─ slug = limited
   │  ├─ verdict = 1 blocker, 0 nitpicks
   │  ├─ contemplate from
   │  │  └─ .reviews/peer/1.test._.review.i001.<hash>.r001._.given.by_peer.limited.md
   │  └─ articulate into
   │     └─ .reviews/peer/1.test._.review.i001.<hash>.r001._.taken.by_self.limited.md
   │
   └─ when you've contemplated this reviewer, run
      └─ rhx route.stone.set --stone 1.test --as contemplated --that limited"
`;

exports[`setStoneAsPassed.exhausted given: [case4] the artifact is EDITED while an exhausted reviewer holds an unanswered blocker when: [t2] the driver EDITS A SECOND TIME, over an ALREADY-CARRIED debt then: matches snapshot — the halt after a SECOND hash move: edit-escape journey - [t2] debt survives two edits 1`] = `
"🦉 the reviewers await your reply

🌕 lets respond
   │
   ├─ review.peer 1/1
   │  ├─ slug = limited
   │  ├─ verdict = 1 blocker, 0 nitpicks
   │  ├─ contemplate from
   │  │  └─ .reviews/peer/1.test._.review.i001.<hash>.r001._.given.by_peer.limited.md
   │  └─ articulate into
   │     └─ .reviews/peer/1.test._.review.i001.<hash>.r001._.taken.by_self.limited.md
   │
   └─ when you've contemplated this reviewer, run
      └─ rhx route.stone.set --stone 1.test --as contemplated --that limited"
`;

exports[`setStoneAsPassed.exhausted given: [case4] the artifact is EDITED while an exhausted reviewer holds an unanswered blocker when: [t3] the driver answers the carried debt then: matches snapshot — the answer cleared the halt: edit-escape journey - [t3] answer discharges the debt 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.test
   ├─ passage = blocked
   ├─ reason = peer reviewer budget exhausted: limited
   ├─ options
   │  ├─ increase budget — yours to spend
   │  │  └─ rhx route.guard.budget --for review --add N --peer limited --stone 1.test
   │  └─ approve as-is — a human must grant
   │     └─ rhx route.stone.set --stone 1.test --as approved
   └─ guard
      ├─ artifacts
      │   └─ $route/1.test*.md
      └─ reviews
          └─ r1: limited (l1, 1/1)
              ├─ exhausted 🌙, cached
              ├─ terminal — does not block higher levels
              ├─ 1 blocker 🔴
              ├─ 0 nitpicks ✓
              ├─ given: .reviews/peer/1.test._.review.i001.<hash>.r001._.given.by_peer.limited.md
              └─ taken: .reviews/peer/1.test._.review.i001.<hash>.r001._.taken.by_self.limited.md"
`;
